--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eye Care</title>
   </head>
-  <body></body>
+  <body>
+    <script>
+      (function () {
+        let theme = localStorage.getItem('theme');
+        if (!theme) {
+          theme = 'dark';
+          localStorage.setItem('theme', theme);
+        }
+        document.documentElement.classList.add(theme);
+      })();
+    </script>
+  </body>
 </html>
